# ceat

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  __CMakeLists.txt  build.zig  build.zig.zon  eat.h  eat.zig
.cache/clangd/index/: buffer.c.232A4E1280CAAB06.idx  buffer.h.DA595DE722F2D1F7.idx  coll.c.A9DA853D3949FE87.idx  coll.h.12ED46AA48B25258.idx  cutil.h.A4A791AF02DFA6D2.idx  data.c.161EF3CFB0DF8FDA.idx  data.h.FDE35F8241134211.idx  ear.c.22381BB1D132998A.idx  ear.h.24969AE27C3E5C5C.idx  eat.c.5FCF0A38E2F10F0E.idx  eat.h.58FED2A79F234400.idx  eau.h.4D4BA7866084CCFC.idx  eaw.c.1E7358EA2AA7A365.idx  eaw.h.25EEA8D068B3E31D.idx  file.c.EFC7F822940B3E31.idx  file.h.C163E55CB766373B.idx  framebuffer.c.D654C304B0288B02.idx  framebuffer.h.12AFDE3E98990DCA.idx  gl.c.1471213A0A7833BB.idx  gl.h.DE6A8CED48F41A8D.idx  input.c.BBFBFF63385C8E8A.idx  input.h.8B1430CF37472FA8.idx  main.c.09DB9192A7039387.idx  main.c.135226F310E25EBC.idx  main.c.6D519D4EAB6FFA84.idx  main.c.798E465E2B486A2E.idx  main.c.AD599CEE36137E1C.idx  mat4.c.B7FE5F0788001829.idx  mat4.h.46ED406F6F90A34B.idx  pipeline.c.17DF13E186D0534A.idx  pipeline.h.336A8C782D0215CF.idx  stb_image.h.E00053DD63622CBE.idx  texarray.c.FEDBF4945A4C1624.idx  texarray.h.6F092FFAB655DEDD.idx  text.c.FD78BEEB62054FEB.idx  text.h.739F7F8842F4D2D6.idx  texture.c.0746B1CBC3985DED.idx  texture.h.58E708002F42626F.idx  user.c.86CD5352F55552E6.idx  user.h.E790E0933994D5BA.idx  (+2 more)
backends/rendering/: impl.c  impl.h
backends/rendering/opengl/: gl.c  gl.h
backends/rendering/opengl/eng/: bindset.c  bindset.h  buffer.c  buffer.h  framebuffer.c  framebuffer.h  pipeline.c  pipeline.h  screen.c  screen.h  texture.c  texture.h
backends/rendering/opengl/gl/init/: funcs.c
backends/rendering/opengl/init/: funcs.c  funcs.h
backends/rendering/opengl/util/: buffer.c  buffer.h  macros.h  pipeline.c  pipeline.h  screen.c  screen.h  texture.c  texture.h
backends/rendering/vulkan/: vk.c  vk.h
backends/rendering/vulkan/eng/: bindset.c  bindset.h  buffer.c  buffer.h  framebuffer.c  framebuffer.h  pipeline.c  pipeline.h  screen.c  screen.h  texture.c  texture.h
backends/rendering/vulkan/init/: comm_buffer.c  comm_buffer.h  comm_pool.c  device_log.c  device_phys.c  device_phys.h  instance.c  instance.h  queue_fam.c  surface.c  sync.c  sync.h  validation.c  validation.h
backends/rendering/vulkan/sc/: image_views.c  render_pass.c  render_pass.h  swapchain.c  swapchain.h
backends/rendering/vulkan/util/: bindset.c  bindset.h  buffer.c  buffer.h  commbuf.c  commbuf.h  img.c  img.h  macros.h  pipeline.c  pipeline.h  shader_mod.c  shader_mod.h  texture.c  texture.h
backends/windowing/: impl.c  impl.h
backends/windowing/glfw/: glfw.c  glfw.h
bindings/cpp/: eat.cpp  eat.hpp
bindings/cpp (deprecated)/: eat.cpp  eat.hpp
bindings/odin/debug/: debug.odin
bindings/odin/eaa/: eaa.odin
bindings/odin/ear/: ear.odin
bindings/odin/eat/: eat.odin
bindings/odin/eau/: eau.odin
bindings/odin/eaw/: eaw.odin
core/: cutil.h  eat.c  root.zig
core/console/: console.c
core/debug/: console.c  console.h  debug.c  debug.h
core/eaa/: eaa.c  eaa.h  engine.c  engine.h  mixer.c  mixer.h  sound.c  sound.h
core/ear/: buffer.c  buffer.h  camera.c  camera.h  data.c  data.h  ear.c  ear.h  framebuffer.c  framebuffer.h  gl.c  gl.h  misc.c  pipeline.c  pipeline.h  texarray.c  texarray.h  text.c  text.h  texture.c  texture.h  user.c  user.h
core/ear/hl/: camera.c  camera.h  data.c  data.h  text.c  text.h  user.c  user.h
core/ear/hl/shaders/: rect.frag  rect.vert  rect_f.spv  rect_v.spv  rect_vk.frag  tex.frag  tex.vert  tex_vk.frag  tex_vk.vert
core/ear/ll/: bindset.c  bindset.h  buffer.c  buffer.h  framebuffer.c  framebuffer.h  misc.c  misc.h  pipeline.c  pipeline.h  texarray.h  texture.c  texture.h
core/ear/ll/gl/: gl.c
core/ear/ll/gl/init/: funcs.h
core/ear/ll/vk/: comm_buffer.c  comm_buffer.h  comm_pool.c  device_log.c  device_log.h  device_phys.c  framebuffer.c  framebuffer.h  image_views.c  image_views.h  instance.c  instance.h  queue_fam.c  render_pass.c  render_pass.h  surface.c  surface.h  swapchain.c  swapchain.h  sync.c  sync.h  validation.c  vk.c  vk.h
core/ear/ll/vk/eng/: bindset.c  bindset.h  buffer.c  buffer.h  framebuffer.c  framebuffer.h  pipeline.c  pipeline.h  screen.c  screen.h  shader_mod.h  texture.c  texture.h
core/ear/ll/vk/init/: comm_buffer.c  comm_buffer.h  comm_pool.c  comm_pool.h  device_log.c  device_phys.c  device_phys.h  instance.c  queue_fam.c  queue_fam.h  surface.c  surface.h  sync.c  sync.h  validation.c
core/ear/ll/vk/sc/: framebuffer.c  image_views.c  render_pass.c  render_pass.h  swapchain.c  swapchain.h
core/ear/ll/vk/util/: bindset.c  bindset.h  buffer.c  buffer.h  pipeline.c  pipeline.h  shader_mod.c  (+2 more)
core/ear/shaders/: rect.vert
core/eau/: arena.c  arena.h  clock.c  clock.h  coll.c  coll.h  conv.c  conv.h  eau.h  ecs.h  file.c  file.h  mat4.c  mat4.h  object.c  object.h  timer.c  timer.h
core/eaw/: eaw.c  eaw.h  input.c  input.h  vk.c  vk.h  window.c  window.h
docs/: eaa.md  ear.md  eau.md  eaw.md  hello.md  house.md  index.md
examples/audio/: main.c
examples/camera/: main.c
examples/clock/: main.c
examples/console/: main.c
examples/debug/: main.c
examples/foreign/cpp/: main.cpp
examples/foreign/cpp (deprecated)/object/: main.cpp
examples/foreign/cpp (deprecated)/window/: main.cpp
examples/foreign/cpp/object/: main.cpp
examples/foreign/cpp/window/: main.cpp
examples/foreign/odin/: main.odin
examples/foreign/odin/object/: main.odin
examples/foreign/odin/window/: main.odin
examples/framebuffer/: main.c
examples/ibuffer/: main.c  shad_v.spv
examples/input/: main.c
examples/object/: main.c
examples/text/: main.c
examples/texture/: main.c
examples/timer/: main.c
examples/triangle/: main.c  shad.frag  shad.vert  shad_f.spv  shad_v.spv
examples/ubuffer/: main.c  shad.frag  shad.vert  shad_f.spv  shad_v.spv
examples/vbuffer/: main.c  shad.frag  shad.vert  shad_f.spv
examples/vulkan/: main.c
examples/window/: main.c
include/GL/: glext.h
